force-app/main/default/objects/PurchaseLine__c/PurchaseLine__c.object-meta.xml
<CustomObject>
    <description>Junction object linking Items to Purchases. Stores quantity and price at the time of transaction.</description>
    <label>PurchaseLine</label>
    <nameField>
        <displayFormat>PL-{000000}</displayFormat>
        <label>PurchaseLine Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PurchaseLine</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>