force-app/main/default/objects/PurchaseLine__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <description>The quantity of the item purchased in this transaction line.</description>
    <inlineHelpText>Enter the quantity of the item for this line.</inlineHelpText>
    <label>Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>