force-app/main/default/objects/PurchaseLine__c/fields/ItemId__c.field-meta.xml
<CustomField>
    <fullName>ItemId__c</fullName>
    <description>Master-Detail relationship to the specific Item being purchased. Connects the transaction line to the product catalog.</description>
    <inlineHelpText>Select the item from the catalog for this purchase line.</inlineHelpText>
    <label>Item</label>
    <referenceTo>Item__c</referenceTo>
    <relationshipLabel>PurchaseLine</relationshipLabel>
    <relationshipName>PurchaseLine</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>