force-app/main/default/objects/PurchaseLine__c/fields/PurchaseId__c.field-meta.xml
<CustomField>
    <fullName>PurchaseId__c</fullName>
    <description>Master-Detail relationship to the parent Purchase record. Ensures cascade deletion of lines if the purchase is removed.</description>
    <inlineHelpText>Select the parent purchase for this line item.</inlineHelpText>
    <label>Purchase</label>
    <referenceTo>Purchase__c</referenceTo>
    <relationshipLabel>PurchaseLine</relationshipLabel>
    <relationshipName>PurchaseLines</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>