force-app/main/default/objects/PurchaseLine__c/fields/UnitCost__c.field-meta.xml
<CustomField>
    <fullName>UnitCost__c</fullName>
    <description>The price per unit of the item at the moment of purchase. Used to maintain financial history even if the Item price changes later.</description>
    <inlineHelpText>Enter the price for a single unit of this item.</inlineHelpText>
    <label>UnitCost</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>